missed chunks job added. complete advisor info page.